# pygame_widgets_plus

./: .gitignore  README.md  main.py  pyproject.toml
pygame_widgets_plus/: __init__.py  helpers.py  keyboard.py  manager.py  mouse.py  widget.py
pygame_widgets_plus/widgets/: __init__.py  button.py  multichoice.py  option.py  slider.py  textarea.py  toggle.py
tests/: test_pygame_widgets_plus.py
